framec/tests/snapshots/ruby_snapshots__async_attribute.snap
---
source: framec/tests/ruby_snapshots.rs
expression: "compile_fixture(\"14_async_attribute\", \"ruby\")"
---
class AsyncFetcherFrameEvent
    attr_accessor :_message
    attr_accessor :_parameters

    def initialize(message, parameters = [])
        @_message = message
        @_parameters = parameters
    end
end


class AsyncFetcherFrameContext
    attr_accessor :_event
    attr_accessor :_return
    attr_accessor :_data
    attr_accessor :_transitioned

    def initialize(event, default_return = nil)
        @_event = event
        @_return = default_return
        @_data = {}
        @_transitioned = false
    end
end


class AsyncFetcherCompartment
    attr_accessor :state
    attr_accessor :state_args
    attr_accessor :state_vars
    attr_accessor :enter_args
    attr_accessor :exit_args
    attr_accessor :forward_event
    attr_accessor :parent_compartment

    def initialize(state, parent_compartment = nil)
        @state = state
        @state_args = []
        @state_vars = {}
        @enter_args = []
        @exit_args = []
        @forward_event = nil
        @parent_compartment = parent_compartment
    end

    def copy
        c = AsyncFetcherCompartment.new(@state, @parent_compartment)
        c.state_args = @state_args.dup
        c.state_vars = @state_vars.dup
        c.enter_args = @enter_args.dup
        c.exit_args = @exit_args.dup
        c.forward_event = @forward_event
        c
    end
end


class AsyncFetcher
    attr_accessor :_state_stack
    attr_accessor :__compartment
    attr_accessor :__next_compartment
    attr_accessor :_context_stack
    attr_accessor :cache

    def initialize
        @_state_stack = []
        @_context_stack = []
        @cache = nil
        @__compartment = __prepareEnter("Ready", [], [])
        @__next_compartment = nil
    end

    def _frame_init
    end

    def self._create
        c = new
        c._frame_init()
        c
    end

    def self.hsm_chain
        {
            "Ready" => ["Ready"],
        }
    end
    def __prepareEnter(leaf, state_args, enter_args)
        comp = nil
        self.class.hsm_chain[leaf].each do |name|
            new_comp = AsyncFetcherCompartment.new(name)
            new_comp.state_args = state_args.dup
            new_comp.enter_args = enter_args.dup
            new_comp.parent_compartment = comp
            comp = new_comp
        end
        comp
    end

    def __prepareExit(exit_args)
        comp = @__compartment
        while comp != nil
            comp.exit_args = exit_args.dup
            comp = comp.parent_compartment
        end
    end

    def __kernel(__e)
        # Route event to current state.
        await __router(__e)
        # Drain any transitions queued by the handler.
        while @__next_compartment != nil
            next_compartment = @__next_compartment
            @__next_compartment = nil
            exit_event = AsyncFetcherFrameEvent.new("<$", @__compartment.exit_args)
            await __router(exit_event)
            @__compartment = next_compartment
            forward_event = next_compartment.forward_event
            next_compartment.forward_event = nil
            if forward_event == nil
                enter_event = AsyncFetcherFrameEvent.new("$>", @__compartment.enter_args)
                await __router(enter_event)
            elsif forward_event._message == "$>"
                await __router(forward_event)
            else
                enter_event = AsyncFetcherFrameEvent.new("$>", @__compartment.enter_args)
                await __router(enter_event)
                await __router(forward_event)
            end
            @_context_stack.each { |ctx| ctx._transitioned = true }
        end
    end

    def __router(__e)
        handler_name = "_state_#{@__compartment.state}"
        if respond_to?(handler_name, true)
            __send__(handler_name, __e, @__compartment)
        end
    end

    def __transition(next_compartment)
        @__next_compartment = next_compartment
    end

    def fetch(key)
        __e = AsyncFetcherFrameEvent.new("fetch", [key])
        __ctx = AsyncFetcherFrameContext.new(__e, nil)
        @_context_stack.push(__ctx)
        begin
            await __kernel(__e)
            return @_context_stack.last._return
        ensure
            @_context_stack.pop
        end
    end

    def _state_Ready(__e, compartment)
        if __e._message == "fetch"
            await self._s_Ready_hdl_user_fetch(__e, compartment)
            return
        end
    end

    def _s_Ready_hdl_user_fetch(__e, compartment)
        key = __e._parameters[0]
        @_context_stack[@_context_stack.length - 1]._return = self.cache.get(key)
    end

    def init
        // async init not yet implemented for Ruby
    end
end
